cbits/skia_capi/sk_types.h

typedef struct {
    float left;
    float top;
    float right;
    float bottom;
} sk_rect_t;
/**
    A sk_paint_t holds the style and color information about how to
    draw geometries, text and bitmaps.
*/
typedef struct sk_paint_t sk_paint_t;
typedef struct sk_imagefilter_t sk_imagefilter_t;
typedef enum {
  NONE_SK_CANVAS_SAVELAYERREC_FLAGS = 0,
  PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 1,
  INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 2,
  F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 4,
} sk_canvas_savelayerrec_flags_t;
typedef struct {
  sk_rect_t* fBounds;
  sk_paint_t* fPaint;
  sk_imagefilter_t* fBackdrop;
  sk_canvas_savelayerrec_flags_t fFlags;
} sk_canvas_savelayerrec_t;
SK_C_PLUS_PLUS_END_GUARD

// ** Skia GPU-related types

SK_C_PLUS_PLUS_BEGIN_GUARD

typedef enum {
    TOP_LEFT_GR_SURFACE_ORIGIN,
    BOTTOM_LEFT_GR_SURFACE_ORIGIN,
} gr_surfaceorigin_t;
typedef struct {
    bool fAvoidStencilBuffers;
    int fRuntimeProgramCacheSize;
    size_t fGlyphCacheTextureMaximumBytes;
    bool fAllowPathMaskCaching;
    bool fDoManualMipmapping;
    int fBufferMapThreshold;
} gr_context_options_t;
typedef intptr_t gr_backendobject_t;
typedef struct gr_backendrendertarget_t gr_backendrendertarget_t;
typedef struct gr_backendtexture_t gr_backendtexture_t;
typedef struct gr_direct_context_t gr_direct_context_t;
typedef struct gr_recording_context_t gr_recording_context_t;
typedef enum {
    OPENGL_GR_BACKEND = 0,
    VULKAN_GR_BACKEND = 1,
    METAL_GR_BACKEND = 2,
    DIRECT3D_GR_BACKEND = 3,
    UNSUPPORTED_GR_BACKEND = 5,
} gr_backend_t;
typedef intptr_t gr_backendcontext_t;
typedef struct gr_glinterface_t gr_glinterface_t;
typedef void (*gr_gl_func_ptr)(void);
typedef gr_gl_func_ptr (*gr_gl_get_proc)(void* ctx, const char* name);
typedef struct {
    unsigned int fTarget;
    unsigned int fID;
    unsigned int fFormat;
    bool fProtected;
} gr_gl_textureinfo_t;
typedef struct {
    unsigned int fFBOID;
    unsigned int fFormat;
    bool fProtected;
} gr_gl_framebufferinfo_t;
typedef struct vk_instance_t vk_instance_t;
typedef struct gr_vkinterface_t gr_vkinterface_t;
typedef struct vk_physical_device_t vk_physical_device_t;
typedef struct vk_physical_device_features_t vk_physical_device_features_t;
typedef struct vk_physical_device_features_2_t vk_physical_device_features_2_t;
typedef struct vk_device_t vk_device_t;
typedef struct vk_queue_t vk_queue_t;
typedef struct gr_vk_extensions_t gr_vk_extensions_t;
typedef struct gr_vk_memory_allocator_t gr_vk_memory_allocator_t;
typedef VKAPI_ATTR void(VKAPI_CALL* gr_vk_func_ptr)(void);
typedef struct vk_instance_t vk_instance_t;
typedef struct vk_physical_device_t vk_physical_device_t;
typedef struct vk_device_t vk_device_t;
typedef struct vk_queue_t vk_queue_t;