src/Skia/Bindings/Types.hsc


@
typedef struct 
{
  sk_rect_t *fBounds;
  sk_paint_t *fPaint;
  sk_imagefilter_t *fBackdrop;
  sk_canvas_savelayerrec_flags_t fFlags;
} sk_canvas_savelayerrec_t
@
-}
data Sk_canvas_savelayerrec = Sk_canvas_savelayerrec
  { fBounds :: Ptr (Sk_rect) -- ^ C field: @"sk_rect_t *fBounds"@
  , fPaint :: Ptr (Sk_paint) -- ^ C field: @"sk_paint_t *fPaint"@
  , fBackdrop :: Ptr (Sk_imagefilter) -- ^ C field: @"sk_imagefilter_t *fBackdrop"@
  , fFlags :: Sk_canvas_savelayerrec_flags -- ^ C field: @"sk_canvas_savelayerrec_flags_t fFlags"@
  }
instance Foreign.Storable.Offset.Offset "fBounds" Sk_canvas_savelayerrec where
  rawOffset = (#offset sk_canvas_savelayerrec_t, fBounds)
instance Foreign.Storable.Offset.Offset "fPaint" Sk_canvas_savelayerrec where
  rawOffset = (#offset sk_canvas_savelayerrec_t, fPaint)
instance Foreign.Storable.Offset.Offset "fBackdrop" Sk_canvas_savelayerrec where
  rawOffset = (#offset sk_canvas_savelayerrec_t, fBackdrop)
instance Foreign.Storable.Offset.Offset "fFlags" Sk_canvas_savelayerrec where
  rawOffset = (#offset sk_canvas_savelayerrec_t, fFlags)
instance Foreign.Storable.Storable Sk_canvas_savelayerrec where
  sizeOf _ = (#size sk_canvas_savelayerrec_t)
  alignment _ = (#alignment sk_canvas_savelayerrec_t)
  peek p' = do
    fBounds <- (#peek sk_canvas_savelayerrec_t, fBounds) p'
    fPaint <- (#peek sk_canvas_savelayerrec_t, fPaint) p'
    fBackdrop <- (#peek sk_canvas_savelayerrec_t, fBackdrop) p'
    fFlags <- (#peek sk_canvas_savelayerrec_t, fFlags) p'
    pure Sk_canvas_savelayerrec{..}
  poke p' Sk_canvas_savelayerrec{..} = do
    (#poke sk_canvas_savelayerrec_t, fBounds) p' fBounds
    (#poke sk_canvas_savelayerrec_t, fPaint) p' fPaint
    (#poke sk_canvas_savelayerrec_t, fBackdrop) p' fBackdrop
    (#poke sk_canvas_savelayerrec_t, fFlags) p' fFlags

{- | C enum: @"gr_surfaceorigin_t"@

@
typedef enum 
{
  TOP_LEFT_GR_SURFACE_ORIGIN,
  BOTTOM_LEFT_GR_SURFACE_ORIGIN
} gr_surfaceorigin_t
@

-}
newtype Gr_surfaceorigin = Gr_surfaceorigin (#type gr_surfaceorigin_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"gr_surfaceorigin_t"@ value (1/2): @"TOP_LEFT_GR_SURFACE_ORIGIN"@
pattern TOP_LEFT_GR_SURFACE_ORIGIN :: Gr_surfaceorigin
pattern TOP_LEFT_GR_SURFACE_ORIGIN = (#const TOP_LEFT_GR_SURFACE_ORIGIN)

-- | C enum @"gr_surfaceorigin_t"@ value (2/2): @"BOTTOM_LEFT_GR_SURFACE_ORIGIN"@
pattern BOTTOM_LEFT_GR_SURFACE_ORIGIN :: Gr_surfaceorigin
pattern BOTTOM_LEFT_GR_SURFACE_ORIGIN = (#const BOTTOM_LEFT_GR_SURFACE_ORIGIN)

{- | C struct: @"gr_context_options_t"@

@
typedef struct 
{
  _Bool fAvoidStencilBuffers;
  int fRuntimeProgramCacheSize;
  size_t fGlyphCacheTextureMaximumBytes;
  _Bool fAllowPathMaskCaching;
  _Bool fDoManualMipmapping;
  int fBufferMapThreshold;
} gr_context_options_t
@
-}
data Gr_context_options = Gr_context_options
  { fAvoidStencilBuffers :: CBool -- ^ C field: @"_Bool fAvoidStencilBuffers"@
  , fRuntimeProgramCacheSize :: CInt -- ^ C field: @"int fRuntimeProgramCacheSize"@
  , fGlyphCacheTextureMaximumBytes :: CSize -- ^ C field: @"size_t fGlyphCacheTextureMaximumBytes"@
  , fAllowPathMaskCaching :: CBool -- ^ C field: @"_Bool fAllowPathMaskCaching"@
  , fDoManualMipmapping :: CBool -- ^ C field: @"_Bool fDoManualMipmapping"@
  , fBufferMapThreshold :: CInt -- ^ C field: @"int fBufferMapThreshold"@
  }
instance Foreign.Storable.Offset.Offset "fAvoidStencilBuffers" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fAvoidStencilBuffers)
instance Foreign.Storable.Offset.Offset "fRuntimeProgramCacheSize" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fRuntimeProgramCacheSize)
instance Foreign.Storable.Offset.Offset "fGlyphCacheTextureMaximumBytes" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fGlyphCacheTextureMaximumBytes)
instance Foreign.Storable.Offset.Offset "fAllowPathMaskCaching" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fAllowPathMaskCaching)
instance Foreign.Storable.Offset.Offset "fDoManualMipmapping" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fDoManualMipmapping)
instance Foreign.Storable.Offset.Offset "fBufferMapThreshold" Gr_context_options where
  rawOffset = (#offset gr_context_options_t, fBufferMapThreshold)
instance Foreign.Storable.Storable Gr_context_options where
  sizeOf _ = (#size gr_context_options_t)
  alignment _ = (#alignment gr_context_options_t)
  peek p' = do
    fAvoidStencilBuffers <- (#peek gr_context_options_t, fAvoidStencilBuffers) p'
    fRuntimeProgramCacheSize <- (#peek gr_context_options_t, fRuntimeProgramCacheSize) p'
    fGlyphCacheTextureMaximumBytes <- (#peek gr_context_options_t, fGlyphCacheTextureMaximumBytes) p'
    fAllowPathMaskCaching <- (#peek gr_context_options_t, fAllowPathMaskCaching) p'
    fDoManualMipmapping <- (#peek gr_context_options_t, fDoManualMipmapping) p'
    fBufferMapThreshold <- (#peek gr_context_options_t, fBufferMapThreshold) p'
    pure Gr_context_options{..}
  poke p' Gr_context_options{..} = do
    (#poke gr_context_options_t, fAvoidStencilBuffers) p' fAvoidStencilBuffers
    (#poke gr_context_options_t, fRuntimeProgramCacheSize) p' fRuntimeProgramCacheSize
    (#poke gr_context_options_t, fGlyphCacheTextureMaximumBytes) p' fGlyphCacheTextureMaximumBytes
    (#poke gr_context_options_t, fAllowPathMaskCaching) p' fAllowPathMaskCaching
    (#poke gr_context_options_t, fDoManualMipmapping) p' fDoManualMipmapping
    (#poke gr_context_options_t, fBufferMapThreshold) p' fBufferMapThreshold

{- | C type alias: @gr_backendobject_t@

@
typedef intptr_t gr_backendobject_t
@
-}
type Gr_backendobject = CIntPtr

{- | Opaque C struct: @"gr_backendrendertarget_t"@
-}
data Gr_backendrendertarget = Gr_backendrendertarget

{- | Opaque C struct: @"gr_backendtexture_t"@
-}
data Gr_backendtexture = Gr_backendtexture

{- | Opaque C struct: @"gr_direct_context_t"@
-}
data Gr_direct_context = Gr_direct_context

{- | Opaque C struct: @"gr_recording_context_t"@
-}
data Gr_recording_context = Gr_recording_context

{- | C enum: @"gr_backend_t"@

@
typedef enum 
{
  OPENGL_GR_BACKEND = 0,
  VULKAN_GR_BACKEND = 1,
  METAL_GR_BACKEND = 2,
  DIRECT3D_GR_BACKEND = 3,
  UNSUPPORTED_GR_BACKEND = 5
} gr_backend_t
@

-}
newtype Gr_backend = Gr_backend (#type gr_backend_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"gr_backend_t"@ value (1/5): @"OPENGL_GR_BACKEND"@
pattern OPENGL_GR_BACKEND :: Gr_backend
pattern OPENGL_GR_BACKEND = (#const OPENGL_GR_BACKEND)

-- | C enum @"gr_backend_t"@ value (2/5): @"VULKAN_GR_BACKEND"@
pattern VULKAN_GR_BACKEND :: Gr_backend
pattern VULKAN_GR_BACKEND = (#const VULKAN_GR_BACKEND)

-- | C enum @"gr_backend_t"@ value (3/5): @"METAL_GR_BACKEND"@
pattern METAL_GR_BACKEND :: Gr_backend
pattern METAL_GR_BACKEND = (#const METAL_GR_BACKEND)

-- | C enum @"gr_backend_t"@ value (4/5): @"DIRECT3D_GR_BACKEND"@
pattern DIRECT3D_GR_BACKEND :: Gr_backend
pattern DIRECT3D_GR_BACKEND = (#const DIRECT3D_GR_BACKEND)

-- | C enum @"gr_backend_t"@ value (5/5): @"UNSUPPORTED_GR_BACKEND"@
pattern UNSUPPORTED_GR_BACKEND :: Gr_backend
pattern UNSUPPORTED_GR_BACKEND = (#const UNSUPPORTED_GR_BACKEND)

{- | C type alias: @gr_backendcontext_t@

@
typedef intptr_t gr_backendcontext_t
@
-}
type Gr_backendcontext = CIntPtr

{- | Opaque C struct: @"gr_glinterface_t"@
-}
data Gr_glinterface = Gr_glinterface

-- | C function pointer type: @typedef void (*gr_gl_func_ptr)(void)@
type Gr_gl_func_ptr = IO (())

-- | Creates a 'FunPtr' of @"gr_gl_func_ptr"@.
foreign import ccall "wrapper" mkFunPtr'Gr_gl_func_ptr :: Gr_gl_func_ptr -> IO (FunPtr Gr_gl_func_ptr)

-- | C function pointer type: @typedef gr_gl_func_ptr (*gr_gl_get_proc)(void *ctx, const char *name)@
type Gr_gl_get_proc = Ptr (()) -> Ptr (CChar) -> IO (FunPtr Gr_gl_func_ptr)

-- | Creates a 'FunPtr' of @"gr_gl_get_proc"@.
foreign import ccall "wrapper" mkFunPtr'Gr_gl_get_proc :: Gr_gl_get_proc -> IO (FunPtr Gr_gl_get_proc)

{- | C struct: @"gr_gl_textureinfo_t"@

@
typedef struct 
{
  unsigned int fTarget;
  unsigned int fID;
  unsigned int fFormat;
  _Bool fProtected;
} gr_gl_textureinfo_t
@
-}
data Gr_gl_textureinfo = Gr_gl_textureinfo
  { fTarget :: CUInt -- ^ C field: @"unsigned int fTarget"@
  , fID :: CUInt -- ^ C field: @"unsigned int fID"@
  , fFormat :: CUInt -- ^ C field: @"unsigned int fFormat"@
  , fProtected :: CBool -- ^ C field: @"_Bool fProtected"@
  }
instance Foreign.Storable.Offset.Offset "fTarget" Gr_gl_textureinfo where
  rawOffset = (#offset gr_gl_textureinfo_t, fTarget)
instance Foreign.Storable.Offset.Offset "fID" Gr_gl_textureinfo where
  rawOffset = (#offset gr_gl_textureinfo_t, fID)
instance Foreign.Storable.Offset.Offset "fFormat" Gr_gl_textureinfo where
  rawOffset = (#offset gr_gl_textureinfo_t, fFormat)
instance Foreign.Storable.Offset.Offset "fProtected" Gr_gl_textureinfo where
  rawOffset = (#offset gr_gl_textureinfo_t, fProtected)
instance Foreign.Storable.Storable Gr_gl_textureinfo where
  sizeOf _ = (#size gr_gl_textureinfo_t)
  alignment _ = (#alignment gr_gl_textureinfo_t)
  peek p' = do
    fTarget <- (#peek gr_gl_textureinfo_t, fTarget) p'
    fID <- (#peek gr_gl_textureinfo_t, fID) p'
    fFormat <- (#peek gr_gl_textureinfo_t, fFormat) p'
    fProtected <- (#peek gr_gl_textureinfo_t, fProtected) p'
    pure Gr_gl_textureinfo{..}
  poke p' Gr_gl_textureinfo{..} = do
    (#poke gr_gl_textureinfo_t, fTarget) p' fTarget
    (#poke gr_gl_textureinfo_t, fID) p' fID
    (#poke gr_gl_textureinfo_t, fFormat) p' fFormat
    (#poke gr_gl_textureinfo_t, fProtected) p' fProtected

{- | C struct: @"gr_gl_framebufferinfo_t"@

@
typedef struct 
{
  unsigned int fFBOID;
  unsigned int fFormat;
  _Bool fProtected;
} gr_gl_framebufferinfo_t
@
-}
data Gr_gl_framebufferinfo = Gr_gl_framebufferinfo
  { fFBOID :: CUInt -- ^ C field: @"unsigned int fFBOID"@
  , fFormat :: CUInt -- ^ C field: @"unsigned int fFormat"@
  , fProtected :: CBool -- ^ C field: @"_Bool fProtected"@
  }
instance Foreign.Storable.Offset.Offset "fFBOID" Gr_gl_framebufferinfo where
  rawOffset = (#offset gr_gl_framebufferinfo_t, fFBOID)
instance Foreign.Storable.Offset.Offset "fFormat" Gr_gl_framebufferinfo where
  rawOffset = (#offset gr_gl_framebufferinfo_t, fFormat)
instance Foreign.Storable.Offset.Offset "fProtected" Gr_gl_framebufferinfo where
  rawOffset = (#offset gr_gl_framebufferinfo_t, fProtected)
instance Foreign.Storable.Storable Gr_gl_framebufferinfo where
  sizeOf _ = (#size gr_gl_framebufferinfo_t)
  alignment _ = (#alignment gr_gl_framebufferinfo_t)
  peek p' = do
    fFBOID <- (#peek gr_gl_framebufferinfo_t, fFBOID) p'
    fFormat <- (#peek gr_gl_framebufferinfo_t, fFormat) p'
    fProtected <- (#peek gr_gl_framebufferinfo_t, fProtected) p'
    pure Gr_gl_framebufferinfo{..}
  poke p' Gr_gl_framebufferinfo{..} = do
    (#poke gr_gl_framebufferinfo_t, fFBOID) p' fFBOID
    (#poke gr_gl_framebufferinfo_t, fFormat) p' fFormat
    (#poke gr_gl_framebufferinfo_t, fProtected) p' fProtected

{- | Opaque C struct: @"vk_instance_t"@
-}
data Vk_instance = Vk_instance

{- | Opaque C struct: @"gr_vkinterface_t"@
-}
data Gr_vkinterface = Gr_vkinterface

{- | Opaque C struct: @"vk_physical_device_t"@
-}
data Vk_physical_device = Vk_physical_device

{- | Opaque C struct: @"vk_physical_device_features_t"@
-}
data Vk_physical_device_features = Vk_physical_device_features

{- | Opaque C struct: @"vk_physical_device_features_2_t"@
-}
data Vk_physical_device_features_2 = Vk_physical_device_features_2

{- | Opaque C struct: @"vk_device_t"@
-}
data Vk_device = Vk_device

{- | Opaque C struct: @"vk_queue_t"@
-}
data Vk_queue = Vk_queue

{- | Opaque C struct: @"gr_vk_extensions_t"@
-}
data Gr_vk_extensions = Gr_vk_extensions

{- | Opaque C struct: @"gr_vk_memory_allocator_t"@
-}
data Gr_vk_memory_allocator = Gr_vk_memory_allocator

-- | C function pointer type: @typedef void (*gr_vk_func_ptr)(void)@
type Gr_vk_func_ptr = IO (())
